cmake_minimum_required(VERSION 3.18)

project(update_engine)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)
set(CMAKE_CXX_EXTENSIONS ON)


set(BUILD_SHARED_LIBS OFF CACHE INTERNAL BOOL FORCE)

if (CMAKE_C_COMPILER_ID STREQUAL "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
    set(CMAKE_LINKER lld)
endif()

# Use exist cmake project
add_subdirectory("${CMAKE_SOURCE_DIR}/platform/external/boringssl")
#add_subdirectory("${CMAKE_SOURCE_DIR}/platform/external/gflags")

set(EVENT__DISABLE_DEBUG_MODE ON CACHE INTERNAL "")
#set(EVENT__ENABLE_VERBOSE_DEBUG OFF CACHE INTERNAL "")
set(EVENT__DISABLE_MM_REPLACEMENT ON CACHE INTERNAL "")
set(EVENT__DISABLE_THREAD_SUPPORT ON CACHE INTERNAL "")
set(EVENT__DISABLE_OPENSSL ON CACHE INTERNAL "")
set(EVENT__DISABLE_BENCHMARK ON CACHE INTERNAL "")
set(EVENT__DISABLE_TESTS ON CACHE INTERNAL "")
set(EVENT__DISABLE_REGRESS ON CACHE INTERNAL "")
set(EVENT__DISABLE_SAMPLES ON CACHE INTERNAL "")
#set(EVENT__DISABLE_CLOCK_GETTIME OFF CACHE INTERNAL "")
#set(EVENT__FORCE_KQUEUE_CHECK OFF CACHE INTERNAL "")
add_subdirectory("${CMAKE_SOURCE_DIR}/platform/external/libevent")

set(BUILD_GMOCK OFF CACHE INTERNAL "")
set(INSTALL_GTEST OFF CACHE INTERNAL "")
add_subdirectory("${CMAKE_SOURCE_DIR}/platform/external/googletest")
set(ENABLE_SIMD_OPTIMIZATIONS ON CACHE INTERNAL "")
add_subdirectory("${CMAKE_SOURCE_DIR}/platform/external/zlib")

add_subdirectory(cmake)